# talk-to-a-pdf

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  summerize.py  utils.py
.github/workflows/: docs.yml  publish.yml
docs/: index.md
search/: search_index.json
ttp/: summerize.py  talk.py  utils.py
